[workspace]
members = [
    "datatypes",
    "status_reporter",
    "fms",
    "arequipa",
    "barcelona",
    "cordoba",
    "delhi",
    "freeport",
    "geneva",
    "georgetown",
    "hamburg",
    "hebron",
    "kingston",
    "lyon",
    "mandalay",
    "medellin",
    "monaco",
    "osaka",
    "ponce",
    "portsmouth",
    "rotterdam",
    "taipei",
    "tripoli",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
