[workspace]
members = [
    "arequipa",
    "barcelona",
    "cordoba",
    "delhi",
    "fms",
    "freeport",
    "geneva",
    "georgetown",
    "hamburg",
    "hebron",
    "kingston",
    "lyon",
    "mandalay",
    "medellin",
    "monaco",
    "osaka",
    "ponce",
    "portsmouth",
    "rotterdam",
    "status_reporter",
    "taipei",
    "tripoli",
    "datatypes",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
