[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
async-std = { version = "=1.9.0", default-features = false, features = [
    "attributes",
    "unstable",
] }
async-global-executor = "2.0.2"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
futures = "0.3.12"
prost = "0.9"
prost-types = "0.9"
bigdata = { path = "../bigdata" }
